--- a/less/common.less
+++ b/less/common.less
@@ -224,7 +224,7 @@ a:hover {
     position: absolute;
     height: 16px;
     left: 3px;
-    top: 3px;
+    top: 2px;
   }
 
   .icon_vk {
@@ -328,7 +328,9 @@ a:hover {
 
 
 .item__descr {
-  color: #959595
+  color: #959595;
+  margin-bottom: 20px;
+  display: inline-block;
 }
 
 .item__content {
