--- a/templates/index.pug
+++ b/templates/index.pug
@@ -6,7 +6,7 @@ html(lang="ru")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic", rel="stylesheet")
         link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', rel='stylesheet')
-        link(href='../css/bundle.min.css', rel='stylesheet')
+        link(href=' css/bundle.min.css', rel='stylesheet')
         script(src='https://code.jquery.com/jquery-3.2.1.min.js')
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     body
@@ -19,7 +19,7 @@ html(lang="ru")
                     ul.sidebar__nav
                         li.sidebar__nav__item.sidebar__brand
                             a(href="/")
-                                img(src="../img/logo.png").brand__image
+                                img(src=" img/logo.png").brand__image
                         li.sidebar__nav__item.mobile-only
                             a.sidebar__link.auth__link.
                                 Вход
@@ -53,7 +53,7 @@ html(lang="ru")
 
                         .head-line__logo.mobile-only
                             a(href="/")
-                                img(src="../img/logo.png")
+                                img(src=" img/logo.png")
 
                         .head-line__title
                             span.title.
@@ -79,7 +79,7 @@ html(lang="ru")
                                     .row
                                         .col-md-8
                                             .item__image-wrapper
-                                                img(src="../img/img1.jpg").item__image.img-responsive
+                                                img(src=" img/img1.jpg").item__image.img-responsive
                                         .col-md-4
                                             .item__content
                                                 p
@@ -131,7 +131,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img2.jpg").item__image.img-responsive
+                                            img(src=" img/img2.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -147,7 +147,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img3.jpg").item__image.img-responsive
+                                            img(src=" img/img3.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -163,7 +163,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img4.jpg").item__image.img-responsive
+                                            img(src="img/img4.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -181,7 +181,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img5.jpg").item__image.img-responsive
+                                            img(src=" img/img5.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -197,7 +197,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img6.jpg").item__image.img-responsive
+                                            img(src=" img/img6.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -213,7 +213,7 @@ html(lang="ru")
                                 .col-md-4.col-sm-6
                                     .item.item_small
                                         .item__image-wrapper
-                                            img(src="../img/img7.jpg").item__image.img-responsive
+                                            img(src=" img/img7.jpg").item__image.img-responsive
                                         .item__content-wrapper
                                             h3.item__title
                                                 a.item__title__link(href="#").
@@ -246,8 +246,8 @@ html(lang="ru")
 
 
 
-        script(src="../assets/afterresize/afterresize.min.js")
-        script(src="../js/common.js")
+        script(src=" assets/afterresize/afterresize.min.js")
+        script(src=" js/common.js")
 
 
 
