--- a/less/common.less
+++ b/less/common.less
@@ -429,6 +429,17 @@ a:hover {
     .item__title {
       font-size: 26px;
     }
+
+    .item__content {
+      margin-top: 20px;
+      p {
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  .item__descr {
+    margin-bottom: 0;
   }
 
   .sidebar {
