--- a/less/common.less
+++ b/less/common.less
@@ -574,6 +574,10 @@ a:hover {
     font-size: 12px;
   }
 
+  .sidebar__search input {
+    padding: 10px 25px 10px 6px;
+  }
+
 
 }
 
@@ -581,14 +585,4 @@ a:hover {
   .mobile-only {
     display: none;
   }
-}
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
-
-}
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width : 320px) {
-
 }
